src/objects/TRAK_User_Story__c.object
<CustomObject>
    <fields>
        <fullName>System_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the System owner for the App: Created on 06/11/2014 by Preeti Grover: TRAK</description>
        <inlineHelpText>The System Owner for the application this User Story is related to. If not set when initially saving the User Story, it should be populated automatically based on the value on the associated App record</inlineHelpText>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_User_Stories12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRAK_Business_Quality_Approval_Date__c</fullName>
        <label>Business Quality Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRAK_Business_Quality_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>Business Quality Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRAK_Computer_System_Qty_Approval_Date__c</fullName>
        <label>Computer Systems Quality Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRAK_Computer_Systems_Quality_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>Computer Systems Quality Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRAK_Custom_Field_1__c</fullName>
        <description>Custom Fields are used for project specific information that is not captured elsewhere on the user story.</description>
        <inlineHelpText>Custom Fields are used for project specific information that is not captured elsewhere on the user story.</inlineHelpText>
        <label>Custom Field 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRAK_Custom_Field_2__c</fullName>
        <description>Custom Fields are used for project specific information that is not captured elsewhere on the user story.</description>
        <inlineHelpText>Custom Fields are used for project specific information that is not captured elsewhere on the user story.</inlineHelpText>
        <label>Custom Field 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRAK_Custom_Field_3__c</fullName>
        <description>Custom Fields are used for project specific information that is not captured elsewhere on the user story.</description>
        <inlineHelpText>Custom Fields are used for project specific information that is not captured elsewhere on the user story.</inlineHelpText>
        <label>Custom Field 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRAK_Decision_Taken__c</fullName>
        <label>Decision Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRAK_Overall_Approval_Status__c</fullName>
        <label>Overall Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRAK_Send_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to send user stories for approval: Created on 06/19/2014 by Preeti Grover:TRAK</description>
        <label>Send for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRAK_System_Custodian_Approval_Date__c</fullName>
        <label>System Custodian Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRAK_System_Custodian_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>System Custodian Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRAK_System_Owner_Approval_Date__c</fullName>
        <label>System Owner Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRAK_System_Owner_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please review LQP -302-16 for signature meanings</inlineHelpText>
        <label>System Owner Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Step_no__c</fullName>
        <label>US Step no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Owner User responsible for this User Story
Created on 01/07/2014 by SMills 
TRAK</description>
        <inlineHelpText>Business/Product Owner for this User Story</inlineHelpText>
        <label>Product / Process Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_steps__c</fullName>
        <description>Validation Steps for this user story
Created on 06/11/2014 by Preeti Grover: TRAK</description>
        <inlineHelpText>For exception cases, please list any specific validation checks that are required to ensure this User Story has been deployed successfully. These will then be run by the Technical Release Team post deployment

If none are needed please put &apos;N/A&quot;</inlineHelpText>
        <label>Validation steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <inlineHelpText>The source control tag related to this User Story</inlineHelpText>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <description>The type of effort involved in this user story
Created on 06/11/2014 by Preeti Grover: TRAK</description>
        <inlineHelpText>The type of work involved in delivering this User Story. This can be used when resource planning and should be populated by Developers or other technical experts as needed</inlineHelpText>
        <label>Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC Config</fullName>
                </value>
                <value>
                    <fullName>SFDC Apex</fullName>
                </value>
                <value>
                    <fullName>SFDC Visualforce</fullName>
                </value>
                <value>
                    <fullName>SFDC Reporting</fullName>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>Backlog</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Priority__c</columns>
        <columns>Development_Stage__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Story_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_Stage__c</field>
            <operation>equals</operation>
            <value>Backlog</value>
        </filters>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>notEqual</operation>
            <value>E-0004</value>
        </filters>
        <label>Backlog</label>
    </listViews>
    <listViews>
        <fullName>High_Priority_Backlog_US</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Development_Stage__c</columns>
        <columns>Priority__c</columns>
        <columns>Story_Points_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_Stage__c</field>
            <operation>equals</operation>
            <value>Raised,Backlog,Story Definition</value>
        </filters>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>notContain</operation>
        </filters>
        <label>High Priority Backlog US</label>
    </listViews>
    <listViews>
        <fullName>Release_12</fullName>
        <columns>NAME</columns>
        <columns>Full_User_Story__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_Stage__c</field>
            <operation>equals</operation>
            <value>Production - Released</value>
        </filters>
        <filters>
            <field>Cirrus_Release__c</field>
            <operation>equals</operation>
            <value>R12</value>
        </filters>
        <label>Release 12</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>US Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>Hotfix_Release</fullName>
        <active>true</active>
        <label>Hotfix Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Major_Release</fullName>
        <active>true</active>
        <label>Major Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weekly_Release</fullName>
        <active>true</active>
        <label>Weekly Release</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Acceptance_Criteria_Freeze</fullName>
        <active>true</active>
        <description>Loclks accpetance criteria so it can only be edited by users with the &quot;Over ride Acceptance Criteria&quot; enabled on their user page</description>
        <errorConditionFormula>AND(
ISCHANGED( Acceptance_Criteria__c ),   
OR(
ISPICKVAL(Development_Stage__c,&quot;Ready for Test&quot;), 
ISPICKVAL(Development_Stage__c,&quot;In Test&quot;), 
ISPICKVAL(Development_Stage__c,&quot;Passed (Complete)&quot;),
ISPICKVAL(Development_Stage__c,&quot;Production - Ready for Release&quot;),
ISPICKVAL(Development_Stage__c,&quot;Production - Released&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Acceptance_Criteria__c</errorDisplayField>
        <errorMessage>You can&apos;t amend the Acceptance Criteria at this stage in the User Story lifecycle. If you need to make an agreed change, revert the User Story Status and Chatter why you are making a change. Late changes should be agreed with the User Story team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allocated_and_Proposed_Sprint_Date_valid</fullName>
        <active>true</active>
        <description>New User Story cannot be created with Allocated sprint earlier than the Proposed Sprint.</description>
        <errorConditionFormula>AND( Allocated_Sprint__c &lt;&gt; NULL, Allocated_Sprint__c &lt;&gt; NULL, Allocated_Sprint__r.Start_Date__c &lt; Proposed_Sprint__r.Start_Date__c)</errorConditionFormula>
        <errorMessage>Allocated Sprint Date should be greater than Proposed Sprint Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approve_US_before_Production_Released</fullName>
        <active>true</active>
        <description>User Story has to be approved before updating the status to Production - Released</description>
        <errorConditionFormula>AND(NOT(ispickval( Approval_Status__c ,&apos;Approved&apos;)),
ispickval( Development_Stage__c ,&apos;Production - Released&apos;))</errorConditionFormula>
        <errorDisplayField>Development_Stage__c</errorDisplayField>
        <errorMessage>User Story has to be approved before updating the status to Production - Released</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_Status</fullName>
        <active>true</active>
        <description>Locks the &apos;Quality Critical&apos;, &apos;GxP&apos;, &apos;Compliance Criteria&apos;, &apos;Privacy&apos;, &apos;Security &apos;, &apos;Legal&apos; fields when the Approval Status is  Approved</description>
        <errorConditionFormula>AND(
ISPICKVAL(Approval_Status__c,&quot;Approved&quot;), 
OR(
ISCHANGED(Critical__c),
ISCHANGED(GXP__c),
ISCHANGED(Compliance_Criteria__c ),
IF(PRIORVALUE(Privacy__c)!=Privacy__c,true,false),
ISCHANGED(Security__c), 
ISCHANGED(Legal__c)


)
)</errorConditionFormula>
        <errorMessage>You can&apos;t amend the  &apos;Quality Critical&apos;, &apos;GxP&apos;, &apos;Compliance Criteria&apos;, &apos;Privacy&apos;, &apos;Security &apos;, &apos;Legal&apos;  fields when the Approval Status is Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancellation_Reason_Check</fullName>
        <active>true</active>
        <description>Checks that the cancellation reason is populate if the story is set to cancelled</description>
        <errorConditionFormula>OR(AND( ISPICKVAL( Development_Stage__c , &quot;Cancelled&quot;) , ISBLANK( Cancellation_Reason__c ) ),AND(NOT(ISPICKVAL( Development_Stage__c , &quot;Cancelled&quot;)),NOT(ISBLANK( Cancellation_Reason__c ))))</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Please enter a Cancellation Reason for Cancelled Status. Please remove the Cancellation Reason if the status is not Cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Populate_Closed_Date</fullName>
        <active>true</active>
        <description>Checks that the cancellation reason is populate if the story is set to cancelled</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Close_Date__c)), NOT(OR(ISPICKVAL(Development_Stage__c,&apos;Cancelled&apos;),ISPICKVAL(Development_Stage__c,&apos;Passed (Complete)&apos;),ISPICKVAL(Development_Stage__c,&apos;Production - Released&apos;))))</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>The Close Date can be populated if the User Story is Cancelled , Passed (Complete) or Production - Released</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Down</fullName>
        <active>true</active>
        <description>Loclks accpetance criteria so it can only be edited by users with the &quot;Over ride Acceptance Criteria&quot; enabled on their user page</description>
        <errorConditionFormula>AND(
ISCHANGED( Acceptance_Criteria__c ), 
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,  
OR(
ISPICKVAL(Development_Stage__c,&quot;5.3 Sprint Team - Awaiting Development &quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.4 Sprint Team - In Development&quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.5. Sprint - Awaiting Review&quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.6. Sprint - Awaiting Release to SAT&quot;), 
ISPICKVAL(Development_Stage__c,&quot;5.7. Sprint - Awaiting SAT&quot;), ISPICKVAL(Development_Stage__c,&quot;5.8. Sprint - In Test&quot;),
ISPICKVAL(Development_Stage__c,&quot;5.9. Done&quot;), 
ISPICKVAL(Development_Stage__c,&quot;6. UAT - Awaiting testing&quot;), 
ISPICKVAL(Development_Stage__c,&quot;7. UAT – In Test&quot;), 
ISPICKVAL(Development_Stage__c,&quot;8. Production – Ready for Release&quot;),
ISPICKVAL(Development_Stage__c,&quot;9. Production – Released&quot;))
 )</errorConditionFormula>
        <errorDisplayField>Acceptance_Criteria__c</errorDisplayField>
        <errorMessage>You can&apos;t amend the Acceptance and/or Compliance Criteria once the user story is categorized as ready for development. Move the status back to &apos;With BPC&apos; to indicate you are working again on the Acceptance and/or Compliance Criteria and Chatter the reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_GxP_and_Criticality</fullName>
        <active>false</active>
        <description>Makes sure users populate the GxP and criticality picklists</description>
        <errorConditionFormula>OR( ISPICKVAL(GXP__c, &apos;&apos;), ISPICKVAL(Critical__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>You must populate both the Quality Critical and GxP fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_to_add_owner_and_custodian</fullName>
        <active>true</active>
        <description>Product owner and system custodian are mandatory on US</description>
        <errorConditionFormula>OR(ISBLANK(System_Owner__c), ISBLANK(System_Custodian__c) )</errorConditionFormula>
        <errorMessage>Please add product owner and system custodian to create the User story.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Approval_Status</fullName>
        <active>false</active>
        <description>Locks the &apos;As A…&apos;, &apos;I want to…&apos; or  &apos;so that…&apos;,&apos;Quality Critical&apos;, &apos;GxP&apos;, &apos;Compliance Criteria&apos;, &apos;Privacy&apos;, &apos;Security &apos;, &apos;Legal&apos;  fields when the Approval Status is Pending Approval</description>
        <errorConditionFormula>AND(
ISPICKVAL(Approval_Status__c,&quot;Pending Approval&quot;), 
OR(
ISCHANGED(As_A_text__c),
ISCHANGED(I_Want_To__c),
ISCHANGED(So_that__c),
ISCHANGED(Critical__c),
ISCHANGED(GXP__c),
ISCHANGED(Compliance_Criteria__c ),
IF(PRIORVALUE(Privacy__c)!=Privacy__c,true,false),
ISCHANGED(Security__c), 
ISCHANGED(Legal__c)


)
)</errorConditionFormula>
        <errorMessage>You can&apos;t amend the  &apos;As A…&apos;, &apos;I want to…&apos; or  &apos;so that…&apos;,&apos;Quality Critical&apos;, &apos;GxP&apos;, &apos;Compliance Criteria&apos;, &apos;Privacy&apos;, &apos;Security &apos;, &apos;Legal&apos;  fields when the Approval Status is Pending Approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Same_Roles_for_Different_Fields</fullName>
        <active>true</active>
        <description>User Story cannot be created with same names in System custodian, Product owner, Business Analyst, Developer and Sprint tester fields.</description>
        <errorConditionFormula>OR( 
AND((Supporting_BA__c =  Developer__c), (Supporting_BA__c &lt;&gt; null), (Developer__c &lt;&gt; null)), 
AND((Supporting_BA__c = System_Owner__c),(Supporting_BA__c &lt;&gt; null),(System_Owner__c &lt;&gt; null)),
AND((Supporting_BA__c =  System_Custodian__c),(Supporting_BA__c &lt;&gt; null),(System_Custodian__c &lt;&gt; null)),
AND((Supporting_BA__c =  Sprint_Tester__c), (Supporting_BA__c &lt;&gt; null), (Sprint_Tester__c &lt;&gt; null)),
AND((Developer__c = System_Owner__c), (Developer__c &lt;&gt; null), (System_Owner__c &lt;&gt; null )),
AND((Developer__c = System_Custodian__c), (Developer__c &lt;&gt; null), (System_Custodian__c &lt;&gt; null)),
AND((Developer__c = Sprint_Tester__c), (Developer__c &lt;&gt; null), (Sprint_Tester__c &lt;&gt; null)),
AND((System_Owner__c = System_Custodian__c),(System_Owner__c &lt;&gt; null),(System_Custodian__c &lt;&gt; null)),
AND((System_Owner__c = Sprint_Tester__c), (System_Owner__c &lt;&gt; null), (Sprint_Tester__c&lt;&gt;null)),
AND((System_Custodian__c = Sprint_Tester__c), (System_Custodian__c &lt;&gt; null), (Sprint_Tester__c &lt;&gt; null))
)</errorConditionFormula>
        <errorMessage>System custodian, Product owner, Business Analyst, Developer and Sprint tester fields cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Value</fullName>
        <active>true</active>
        <description>Able to create a User story with &apos;Production Release&apos; status.</description>
        <errorConditionFormula>AND( ISNEW(), NOT( ISPICKVAL( Development_Stage__c , &apos;Backlog&apos;)),NOT(ISPICKVAL( Development_Stage__c , &apos;Raised&apos;)))</errorConditionFormula>
        <errorDisplayField>Development_Stage__c</errorDisplayField>
        <errorMessage>User Story can only be created in &apos;Backlog&apos;  and &apos;Raised&apos; Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Value_Change</fullName>
        <active>true</active>
        <description>User Stories status cannot be changed from &apos;Production Release&apos; to &apos;Backlog&apos;.</description>
        <errorConditionFormula>CONTAINS( TEXT( PRIORVALUE(  Development_Stage__c  ) ) , &quot;Production - Released&quot;)</errorConditionFormula>
        <errorDisplayField>Development_Stage__c</errorDisplayField>
        <errorMessage>Status Value cannot be changed from &apos;Production-Released&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAK_Approved_Status_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(Approval_Status__c , &quot;Approved&quot;) || ISPICKVAL(Approval_Status__c , &quot;Pending Approval&quot;))&amp;&amp; (ISCHANGED(  System_Custodian__c )||  ISCHANGED(Computer_Systems_Quality__c) ||  ISCHANGED(Compliance_Owner__c) ||  ISCHANGED(System_Owner__c) ),true,false)</errorConditionFormula>
        <errorMessage>You cannot change Approver once the User Story is approved or is in Pending Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Story_Approval</fullName>
        <active>true</active>
        <description>This user story has to be approved before setting the status to any value after &apos;Ready for Development&apos;.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Approval_Status__c, &apos;Approved&apos;)),NOT(OR(ISPICKVAL(Development_Stage__c, &apos;Cancelled&apos;),ISPICKVAL(Development_Stage__c, &apos;Backlog&apos;),ISPICKVAL(Development_Stage__c, &apos;Raised&apos;),ISPICKVAL(Development_Stage__c, &apos;Story Definition&apos;))))</errorConditionFormula>
        <errorDisplayField>Development_Stage__c</errorDisplayField>
        <errorMessage>This user story has to be approved before setting the status to any value after &apos;Ready for Development&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Close_Date</fullName>
        <active>true</active>
        <description>User Story &apos;Close Date&apos; should be in the future.</description>
        <errorConditionFormula>Close_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close Date cannot be in the past.</errorMessage>
    </validationRules>
</CustomObject>